<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:background="@color/cardview_light_background"
        android:hint="@string/main_activity__hint"
        android:text=""
        android:editable="false"
        />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/divideButton"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/divideButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        app:layout_constraintStart_toEndOf="@id/clearButton"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="@dimen/betweenNumbers"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/numbers_size"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clearButton"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/_1"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/numbers_size"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clearButton"
        app:layout_constraintStart_toEndOf="@id/button1"
        android:layout_marginStart="@dimen/betweenNumbers"
        android:text="@string/_2"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/numbers_size"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintTop_toBottomOf="@id/clearButton"
        app:layout_constraintStart_toEndOf="@id/button2"
        android:layout_marginStart="@dimen/betweenNumbers"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/numbers_size"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/_4"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/numbers_size"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintStart_toEndOf="@id/button4"
        android:layout_marginStart="@dimen/betweenNumbers"
        android:text="@string/_5"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/numbers_size"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button5"
        android:layout_marginStart="@dimen/betweenNumbers"
        android:text="@string/_6"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="@dimen/numbers_size"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/_7"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="@dimen/numbers_size"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button5"
        app:layout_constraintStart_toEndOf="@id/button7"
        android:layout_marginStart="@dimen/betweenNumbers"
        android:text="@string/_8"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="@dimen/numbers_size"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button8"
        android:layout_marginStart="@dimen/betweenNumbers"
        android:text="@string/_9"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button8"
        android:text="@string/_0"/>

    <Button
        android:id="@+id/dotButton"
        android:layout_width="@dimen/numbers_size"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button8"
        app:layout_constraintStart_toEndOf="@id/button0"
        android:layout_marginStart="@dimen/betweenNumbers"
        android:text="@string/dot"/>

    <Button
        android:id="@+id/equalButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/dotButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/betweenNumbers"
        android:text="@string/equals"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divideButton"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/betweenNumbers"
        android:text="@string/add"/>

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addButton"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/betweenNumbers"
        android:text="@string/subtract"/>

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/subtractButton"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/betweenNumbers"
        android:text="@string/multiply"/>

</androidx.constraintlayout.widget.ConstraintLayout>
